force-app/main/default/objects/Criteria_Refinement__c.object
<CustomObject>
    <label>Criteria Refinement</label>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Criteria Refinement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Refinements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>