force-app/main/default/objects/Criteria_Refinement__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>The parent criteria the refinement record will be applied to.</description>
    <label>Criteria</label>
    <referenceTo>Criteria__c</referenceTo>
    <relationshipLabel>Criteria Refinements</relationshipLabel>
    <relationshipName>Criteria_Refinements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>