force-app/main/default/objects/Criteria_Refinement__c/fields/Refinement_Field_Left__c.field-meta.xml
<CustomField>
    <fullName>Refinement_Field_Left__c</fullName>
    <description>The API name of the object-field combination being used on the left side of the refinement comparison. Example. Account.Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinement Field (Left)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>