force-app/main/default/objects/Criteria_Refinement__c/fields/Refinement_Field_Right__c.field-meta.xml
<CustomField>
    <fullName>Refinement_Field_Right__c</fullName>
    <description>The API name of the object-field combination being used on the right side of the refinement comparison. This field should be populated if you are comparing the left side field to the value of another field. Example. Account.Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinement Field (Right)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>