force-app/main/default/objects/Criteria_Refinement__c/fields/Refinement_Type__c.field-meta.xml
<CustomField>
    <fullName>Refinement_Type__c</fullName>
    <description>Indicator of whether the refinement record should be applied to the right or left side of the parent criteria.</description>
    <label>Refinement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Right side</fullName>
            </value>
            <value>
                <fullName>Left side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>