force-app/main/default/objects/Criteria_Refinement__c/fields/Refinement_Value__c.field-meta.xml
<CustomField>
    <fullName>Refinement_Value__c</fullName>
    <description>The value being used on the right side of the refinement comparison. This field should be populated if you are comparing the left side field to a static value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinement Value (Right)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>