force-app/main/default/objects/Criteria_Refinement__c/validationRules/CR_Criteria_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Criteria_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Criteria__c )</errorConditionFormula>
    <errorDisplayField>Criteria__c</errorDisplayField>
    <errorMessage>A Criteria must be defined for a Criteria Refinement.</errorMessage>
</ValidationRule>