force-app/main/default/objects/Criteria_Refinement__c/validationRules/CR_Refinement_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Refinement_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Refinement_Type__c ,&apos;&apos;), NOT( ISBLANK( Refinement_Value__c ) ) )</errorConditionFormula>
    <errorDisplayField>Refinement_Type__c</errorDisplayField>
    <errorMessage>A refinement type must be defined for a Criteria Refinement</errorMessage>
</ValidationRule>