force-app/main/default/objects/Criteria_Refinement__c/validationRules/CR_Select_Either_Value_or_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Select_Either_Value_or_Field</fullName>
    <active>true</active>
    <description>To ensure that both value and field are not set at the same time</description>
    <errorConditionFormula>AND( NOT( ISBLANK( Refinement_Field_Right__c ) ) ,  NOT( ISBLANK( Refinement_Value__c ) )  )</errorConditionFormula>
    <errorMessage>A Refinement Field and Refinement Value cannot be set at the same time. Please choose one.</errorMessage>
</ValidationRule>