force-app/main/default/objects/Criteria_Refinement__c/validationRules/CR_Select_Value_or_Field_Once.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_Select_Value_or_Field_Once</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Refinement_Field_Right__c ) , ISBLANK( Refinement_Value__c ))</errorConditionFormula>
    <errorMessage>Both Refinement Field (right) &amp; Refinement Value (right) can&apos;t be empty at once.</errorMessage>
</ValidationRule>