force-app/main/default/objects/Criteria_Refinement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Criteria__c</columns>
    <columns>Refinement_Field_Left__c</columns>
    <columns>Refinement_Field_Right__c</columns>
    <columns>Operator__c</columns>
    <columns>Refinement_Type__c</columns>
    <columns>Refinement_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>